# LearnedGrasp

./: .gitignore  260422_160604.pth  MODELS.py  README.md  custom_loss.py  dataset_validation.py  dl_statistical_significance.py  encoding-test-copy.py  encoding-test.py  engineered_features.py  gaze_ablation_comparison.py  grasp_image_set.py  grasp_mesh_set.py  lda-test.py  node_encoder.pt  plot_sample.py  plot_summaries.py  pyproject.toml  run_mesh_ml.py  showcase_input_meshes.py  statistical_significance_ml.py  train_config.json  train_gnn_batch.py  train_gnn_config.json  train_gnn_ui.py  train_regression_ui.py  train_ui.py  visualise_gnn.py  visualise_layers.py
analysis/: batch_test_summary.py  dataset_validation.py  dl_statistical_significance.py  gaze_ablation_comparison.py  plot_mesh_results.py  plot_model_weights.py  plot_sample.py  run_mesh_ml.py  showcase_input_meshes.py  statistical_comparison.py  statistical_significance_ml.py  visualise_gnn.py  visualise_layers.py
scripts/: train_gnn_batch.py  train_gnn_ui.py  train_regression_ui.py  train_ui.py
src/graspcnn/: __init__.py  _compat.py  features.py  models.py
src/graspcnn/data/: __init__.py  image_set.py  mesh_set.py
src/graspcnn/training/: __init__.py  base.py  ui.py
