[project]
name = "graspcnn"
version = "0.1.0"
description = "Deep learning for grasp inference from visual and gaze data (HOT3D)."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graspcnn"]
